--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,12 +8,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
-    <title>Привет, мир!</title>
+    <title>Welcome!</title>
 </head>
 <body>
-<h1>Привет, мир!</h1>
+
+<h1 style="text-align: center;">Welcome!</h1>
 <br>
 <br>
-<a href="login" style="display: block; text-align: center; font-size: 26px;">Вход</a>
+<a href="login" style="display: block; text-align: center; font-size: 26px;">Enter</a>
 </body>
 </html>
