--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,17 +1,69 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaforg">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Данные</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style>
+        .table-caption {
+            padding-left: 5px;
+        }
+    </style>
 </head>
 <body>
-<h1>Ваши данные: </h1>
-<br>
-<div th:if="${user}">
-    <p th:text="${user.toString()}" style="font-size: 150%;"></p>
+
+<div class="container-fluid">
+    <div class="row bg-dark text-white d-flex justify-content-between align-items-center" style="height: 50px;">
+        <!-- Dark top bar on the page -->
+        <div class="p-2">
+            <p>Email: <span th:text="${user.email}"></span>, Roles: <span th:text="${user.roles}"></span></p>
+            <a href="/logout" class="text-white p-2 position-absolute top-0 end-0">Logout</a>
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col-2 bg-white p-2" style="height: 100vh;">
+            <!-- Белая левая часть страницы -->
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary" type="button">User</button>
+            </div>
+        </div>
+        <div class="col-10 bg-light" style="height: 100vh;">
+            <!-- Светло-серая правая часть страницы -->
+            <h1 class="p-2">User information page</h1>
+                <table class="table table-striped table-hover caption-top">
+                    <caption class="fw-bold table-caption p-3">About user</caption>
+                    <thead>
+                    <tr>
+                        <th class="text-center">ID</th>
+                        <th class="text-center">First Name</th>
+                        <th class="text-center">Last Name</th>
+                        <th class="text-center">Age</th>
+                        <th class="text-center">Email</th>
+                        <th class="text-center">Role</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td class="text-center" th:text="${user.id}"></td>
+                        <td class="text-center" th:text="${user.firstName}"></td>
+                        <td class="text-center" th:text="${user.lastName}"></td>
+                        <td class="text-center" th:text="${user.age}"></td>
+                        <td class="text-center" th:text="${user.email}"></td>
+                        <td class="text-center" th:text="${user.roles}"></td>
+                    </tr>
+                    </tbody>
+                </table>
+
+        </div>
+    </div>
 </div>
-<br>
-<br>
-<a href="logout" style="display: block; text-align: center; font-size: 26px;">Выход</a>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
