--- a/src/main/resources/templates/userSaved.html
+++ b/src/main/resources/templates/userSaved.html
@@ -5,7 +5,7 @@
     <title>Success</title>
 </head>
 <body>
-<h1 style="text-align: center;">Пользователь успешно сохранён!</h1>
+<h1 style="text-align: center;">User saved successfully!</h1>
 <br>
 <a href="admin" style="display: block; text-align: center; font-size: 24px;">Перейти на главную</a>
 </body>
